<resources>
    <string name="app_name">nearby</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="login_srt">로그인</string>
    <string name="supporter_sign_up">보호자 회원가입</string>
    <string name="logout">로그아웃</string>
    <string name="fail_srt">실패</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="finish">종료</string>
    <string name="ln">성</string>
    <string name="fn">이름</string>
    <string name="gender">성별</string>
    <string name="address">주소</string>
    <string name="zip">우편번호</string>
    <string name="email">이메일</string>
    <string name="major">전공</string>
    <string name="phone">H.P</string>
    <string name="height">키</string>
    <string name="bla">기초생활수급자</string>
    <string name="registerdate">등록날짜</string>
    <string name="startdate">입원날짜</string>
    <string name="license_start_date">경력 시작일</string>
    <string name="name">이름</string>
    <string name="dob">생년월일</string>
    <string name="location_registered_date">요양원 등록일</string>
    <string name="location_start_date">요양원 배정일</string>
    <string name="description">기타사항</string>
    <string name="please_wait">잠시만 기다려주세요.</string>
    <string name="back_srt">뒤로</string>
    <string name="detail_srt">상세보기</string>
    <string name="save_srt">저장</string>
    <string name="select_srt">선택</string>
    <string name="select">선택하기</string>
    <string name="title_srt">제목</string>
    <string name="take_period_srt">복용 기간</string>
    <string name="take_period_start_srt">복용 시작일</string>
    <string name="take_period_finish_srt">복용 종료일</string>
    <string name="delete_srt">삭제</string>
    <string name="delete">삭제하기</string>
    <string name="search_srt">검색</string>
    <string name="reset">초기화</string>
    <string name="single_dose">1회 투약량</string>
    <string name="num_of_daily_dose">1일 투여횟수</string>
    <string name="total_dosing_days">총 투약일수</string>
    <string name="usage">용법</string>
    <string name="morning">아침</string>
    <string name="lunch">점심</string>
    <string name="evening">저녁</string>
    <string name="add_srt">추가</string>
    <string name="add">추가하기</string>
    <string name="completed_symptom_srt">완치</string>
    <string name="symptom_srt">증상</string>
    <string name="symptom_start_date">발병일</string>
    <string name="date_select">날짜 선택</string>
    <string name="modify_srt">수정</string>
    <string name="nursing_home_meal_srt">병원 식단</string>
    <string name="water_gruel">미음</string>
    <string name="etc">기타</string>
    <string name="take_medicine_srt">복용</string>
    <string name="take_photo_srt">촬영</string>
    <string name="take_photo_again_srt">다시찍기</string>
    <string name="blood_pressure_srt">혈압</string>
    <string name="pulse_srt">맥박</string>
    <string name="temperature_srt">체온</string>
    <string name="re_measurement_srt">다시측정</string>
    <string name="save_result_srt">결과저장</string>
    <string name="success_srt">성공</string>
    <string name="add_supporter">보호자 추가</string>
    <string name="ingredient">주요성분</string>
    <string name="classification">약효분류</string>
    <string name="reference_srt">출처</string>
    <string name="medicine_code_srt">코드</string>
    <string name="medicine_name_srt">약명</string>
    <string name="medicine_detail_srt">상세정보</string>
    <string name="medicine_usage_capacity">용법/용량</string>
    <string name="medicine_company">제조사</string>
    <string name="close_srt">닫기</string>
    <string name="check_srt">확인</string>
    <string name="connect_bluetooth">기기연결</string>
    <string name="warning_srt">경고</string>
    <string name="nurse">간호사</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="patient">환자</string>
    <string name="target_patient">대상 환자</string>
    <string name="log_msg">로그 메시지</string>
    <string name="search_start_date">시작일</string>
    <string name="search_finish_date">종료일</string>
    <string name="fail">빈 칸을 모두 채워주세요</string>
    <string name="back">뒤로 돌아갑니다</string>
    <string name="record_srt">기록</string>
    <string name="manage_srt">관리</string>
    <string name="inquiry_srt">조회</string>
    <string name="register_srt">등록</string>
    <string name="manage_symptom_srt">증상 관리</string>
    <string name="manage_medicine_srt">복용 약 관리</string>
    <string name="manage_weight_srt">몸무게 관리</string>
    <string name="edit_my_info">내 정보 수정</string>
    <string name="edit_patient_info">환자 정보 수정</string>
    <string name="edit_patient_record">환자 의료 정보 관리</string>
    <string name="edit_location_info">요양원 정보 관리</string>
    <string name="register_patient_srt">환자등록</string>
    <string name="manage_supporter_srt">보호자관리</string>
    <string name="monthly_event_register_srt">이달의행사</string>
    <string name="record_vital_sign">Vital Sign</string>
    <string name="record_patient_medicine">약 복용 여부</string>
    <string name="record_patient_meal">식사 여부</string>
    <string name="record_remark">특이사항</string>
    <string name="record_photo">사진</string>
    <string name="inquiry_location_patient">요양원 환자 조회</string>
    <string name="inquiry_patient_record">환자 간호일지 조회</string>
    <string name="inquiry_log">로그 기록 조회</string>
    <string name="search_supporter">보호자 검색</string>
    <string name="view_by_date">일자별 조회</string>
    <string name="view_by_item">항목별 조회</string>
    <string name="my_patient">내 환자</string>
    <string name="related_nurse">연관 간호사</string>
    <string name="search_patient">환자 검색</string>
    <string name="search_by_msg">메시지 검색</string>
    <string name="please_enter_id">아이디를 입력해주세요.</string>
    <string name="please_enter_pw">비밀번호를 입력해주세요.</string>
    <string name="please_enter_ln">성을 입력해주세요.</string>
    <string name="please_enter_fn">이름을 입력해주세요.</string>
    <string name="please_enter_address">주소를 입력해주세요.</string>
    <string name="please_enter_zip">우편번호를 입력해주세요.</string>
    <string name="please_enter_phone">핸드폰 번호를 입력해주세요.</string>
    <string name="please_enter_height">키를 입력해주세요.</string>
    <string name="please_enter_id_and_pw">아이디와 비밀번호를 입력해주세요.</string>
    <string name="please_enter_description">기타사항을 입력해주세요.</string>
    <string name="login_failed_srt">로그인 실패</string>
    <string name="please_check_id_or_pw">아이디 혹은 비밀번호를 확인해주세요.</string>
    <string name="please_enter_title">제목을 입력해주세요.</string>
    <string name="please_enter_take_period">복용 기간을 입력해주세요.</string>
    <string name="please_enter_search_medicine_content">약명 혹은 보험코드를 입력해주세요.</string>
    <string name="please_enter_sd">1회 투약량을 입력해주세요.</string>
    <string name="please_enter_ndd">1일 투여횟수를 입력해주세요.</string>
    <string name="please_enter_tdd">총 투약일수를 입력해주세요.</string>
    <string name="please_enter_usage">용법을 입력해주세요.</string>
    <string name="please_enter_patient_symptom">증상을 입력해주세요.</string>
    <string name="please_enter_weight">몸무게를 입력해주세요.</string>
    <string name="please_input_remark">특이사항을 입력해주세요.</string>
    <string name="please_input_supporter_name_or_id">보호자 이름 및 아이디를 입력하세요.</string>
    <string name="please_input_supporter_relationship">환자와의 관계를 입력해주세요.</string>
    <string name="please_input_patient_name">환자의 이름을 입력해주세요.</string>
    <string name="Please_enter_your_search_term">검색어를 입력해주세요.</string>
    <string name="print_hello_msg">안녕하세요. %1$s님</string>
    <string name="no_search_data">검색 결과가 없습니다.</string>
    <string name="there_are_no_data">표시할 데이터가 없습니다.</string>
    <string name="there_are_no_supporter">등록된 보호자가 없습니다.</string>
    <string name="there_are_no_patient">등록된 환자가 없습니다.</string>
    <string name="successfully_recorded">성공적으로 기록하였습니다.</string>
    <string name="successfully_edit">성공적으로 수정하였습니다.</string>
    <string name="no_bluetooth_connection">측정 기기와 연결되지 않았습니다.</string>
    <string name="bluetooth_connection_success">측정 기기 연결됨</string>
    <string name="bluetooth_connection_fail">측정 기기 연결 실패</string>
    <string name="completed_take_medicine_srt">복용 완료</string>
    <string name="are_you_sure_logout">로그아웃 하시겠습니까?</string>
    <string name="are_you_finish_app">앱을 종료하시겠습니까?</string>
    <string name="are_you_sure_you_want_to_delete_supporter">정말로 %1$s 보호자를 삭제하시겠습니까?</string>
    <string name="add_patient_medicine_srt">복용 약 추가</string>
    <string name="add_patient_symptom_srt">증상 추가</string>
    <string name="add_medicine">약 추가</string>
    <string name="edit_weight">몸무게 수정</string>
    <string name="add_custom_remark">기타 특이사항 추가</string>
    <string name="add_patient_remark">목록에서 추가</string>
    <string name="required_permission">진행을 위하여 권한 승인이 필요합니다.</string>
    <string name="enter_more_information">추가 정보 입력</string>
    <string name="i_am_employee">나는 직원입니다.</string>
    <string name="log_add_weight">%1$s님의 몸무게 기록에 %2$skg 추가</string>
    <string name="log_add_symptom">%1$s님의 증상 관리에 %2$s 증상 추가</string>
    <string name="log_add_medicine">%1$s님의 복용약 관리에 %2$s 추가</string>
    <string name="log_add_record">%1$s님의 %2$s 기록 추가</string>
    <string name="log_edit_patient_info">%1$s님의 신상 정보 수정 추가</string>
    <string name="log_add_supporter">%1$s님에게 보호자 %2$s님 추가</string>
    <string name="log_remove_supporter">%1$s님의 보호자 %2$s님 삭제</string>
    <string name="title_devices">BLE Devices</string>
    <string name="title_products">Cypress BLE Products</string>
    <string name="title_contact">Contact Us</string>
    <string name="title_about">About</string>
    <string name="bluetooth_pair_start">Pairing started…\nPlease wait…</string>
    <string name="bluetooth_pair">Paired</string>
    <string name="bluetooth_unpair">Not Paired</string>
    <string name="bluetooth_pair_unpair_failed">Pair/Unpair failed</string>
    <string-array name="nav_drawer_items">
        <item>BLE Devices</item>
        <item>Cypress</item>
        <item>About</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_child_home">Home</string>
    <string name="navigation_drawer_child_ble">BLE Products</string>
    <string name="navigation_drawer_child_mobile">CySmart Mobile</string>
    <string name="navigation_drawer_child_contact">Contact Us</string>
    <string name="cab_delete">Delete</string>
    <string name="image_navigation_icon">Navigation icon</string>
    <string name="image_splash_logo">Splash logo</string>
    <string name="image_navigation_drawer_logo">navigation logo</string>
    <string name="image_hrm_measurement_heart">heart rate monitor heart icon</string>
    <string name="image_hrm_ee_icon">heart rate monitor energy icon</string>
    <string name="image_hrm_rr_icon">heart rate monitor rr icon</string>
    <string name="image_health_temp_measurement_heart">health temperature thermometer icon</string>
    <string name="image_battery_service_level">battery level icon</string>
    <string name="image_bluetooth_logo">bluetooth logo</string>
    <string name="image_transmission_background_circle_logo">transmission blue circle</string>
    <string name="image_transmission_foreground_circle_logo">transmission white circle</string>
    <string name="glucose_icon">glucose icon</string>
    <string name="capsense_button_item">CapSense button icon</string>
    <string name="image_actionbar_bg_color">background color</string>
    <string name="image_about_cypress_logo">cypress logo</string>
    <string name="image_blood_pressure">Blood pressure image</string>
    <string name="image_sensor_hub_graph">Sensor hub graph image</string>
    <string name="image_sensor_hub_accelerometer">Sensor hub accelerometer image</string>
    <string name="image_sensor_hub_accelerometer_cube">Sensor hub accelerometer cube image</string>
    <string name="image_sensor_hub_temperature">Sensor hub temperature image</string>
    <string name="graph">Graph</string>
    <string name="log">Log</string>
    <string name="share">Share</string>
    <string name="search_title">Search Devices</string>
    <string name="cache">Clear cache on disconnect</string>
</resources>