<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:showAsAction="always"
        android:title="@string/share" />
    <!--  android:actionProviderClass="android.widget.ShareActionProvider" -->

    <item
        android:id="@+id/log"
        android:icon="@drawable/document_icon"
        android:showAsAction="always"
        android:title="@string/log" />
    <item
        android:id="@+id/graph"
        android:icon="@drawable/graph"
        android:showAsAction="always"
        android:title="@string/graph"
        android:visible="false"/>

    <item
        android:id="@+id/search"
        android:actionLayout="@layout/layout_search"
        android:icon="@drawable/search_white_icon"
        android:showAsAction="always|collapseActionView"
        android:visible="false"
        android:title="@string/search_title" />
    <item
        android:id="@+id/sharelogger"
        android:icon="@drawable/share"
        android:showAsAction="always"
        android:title="@string/share"
        android:visible="false" />

    <item
        android:id="@+id/clearcache"
        android:icon="@drawable/delete_normal"
        android:showAsAction="always"
        android:title="@string/share"
        android:visible="false" />

    <item
        android:id="@+id/pairing"
        android:checkable="true"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:showAsAction="never"
        android:title="@string/cache"
        android:visible="true" />
</menu>
