<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cf.nearby.nearby.nurse.RegisterPatientActivity">
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/register_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/background_color">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="성"
                android:layout_margin="10dp"
                android:gravity="top"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/patient_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_font_size"
                android:textColor="@color/profile_content"
                android:hint="@string/please_enter_ln"
                app:met_primaryColor="@color/profile_content"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/ln"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fn"
                android:layout_margin="10dp"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/patient_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_font_size"
                android:textColor="@color/profile_content"
                android:hint="@string/please_enter_fn"
                app:met_primaryColor="@color/profile_content"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/fn"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_margin="10dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="남"
                android:buttonTint="@color/black"
                android:id="@+id/male"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="여"
                android:buttonTint="@color/black"
                android:id="@+id/female"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_margin="10dp"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/patient_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_font_size"
                android:textColor="@color/profile_content"
                android:hint="@string/please_enter_address"
                app:met_primaryColor="@color/profile_content"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/id"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zip"
                android:layout_margin="10dp"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/patient_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_font_size"
                android:textColor="@color/profile_content"
                android:hint="@string/please_enter_zip"
                app:met_primaryColor="@color/profile_content"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/zip"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_margin="10dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/patient_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/please_enter_phone"
                android:textColor="@color/profile_content"
                android:textSize="@dimen/default_font_size"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/phone"
                app:met_primaryColor="@color/profile_content"
                app:met_singleLineEllipsis="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bla"
                android:layout_margin="10dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:id="@+id/patient_bla"
                android:layout_height="wrap_content"
                android:text="선택"
                android:buttonTint="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:layout_margin="10dp"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/patient_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_font_size"
                android:textColor="@color/profile_content"
                android:hint="@string/please_enter_height"
                app:met_primaryColor="@color/profile_content"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/id"
                app:met_singleLineEllipsis="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startdate"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registerdate"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dob"
                    android:layout_margin="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:layout_margin="10dp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/patient_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/default_font_size"
                    android:textColor="@color/profile_content"
                    android:hint="@string/please_enter_description"
                    app:met_primaryColor="@color/profile_content"
                    app:met_floatingLabel="normal"
                    app:met_floatingLabelText="@string/id"
                    app:met_singleLineEllipsis="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/register_btn"
        android:text="@string/record_srt"
        android:background="@color/dark_gray"
        android:textColor="@color/white"
        android:textSize="@dimen/default_font_size"
        android:layout_alignParentBottom="true"/>
    
</RelativeLayout>

